--- a/create-campaign.html
+++ b/create-campaign.html
@@ -3,7 +3,6 @@
 	<title>Conversion Tool</title>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 	<div id="container">
@@ -41,131 +40,41 @@
 			</div>
 		</div>
 		<div id="contentWrap">
-			<h4>Manage Campaigns</h4>
+			<h4>Create Campaign</h4>
 			<div id="content">
-				<p style="text-align: center;font-weight: bold;font-size: 14px;width: 100%;">Company Name</p>
-				<div id="pnlTop">
-					<h3></h3>
-					<a href="create-campaign.html">Create Campaign</a>
-				</div>
-					<div class="pass header">
-						<div>Name</div>
-						<div>Start Date</div>
-						<div>End Date</div>
-						<div>Text Color</div>
-						<div>Header Color</div>
-						<div>Header Text</div>
-						<div>Created Date</div>
-						<div>Is Active</div>
-						<div></div>
-						<div></div>
-					</div>
-					<div class="pass">
-						<div>Name</div>
-						<div>Start Date</div>
-						<div>End Date</div>
-						<div>Text Color</div>
-						<div>Header Color</div>
-						<div>Header Text</div>
-						<div>Created Date</div>
-						<div>Is Active</div>
-						<div><a href="#" id="viewDetail">View</a></div>
-						<div class="buttons">
-							<a href="#" id="edit"><svg width="14" height="14" viewBox="0 0 448 512" fill="#8F92A1" fill-opacity="0.7" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="copy" role="img" xmlns="http://www.w3.org/2000/svg" class="svg-inline--fa fa-copy fa-w-14 fa-lg"><path fill="currentColor" d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"></path></svg></a>
-							<a href="#" onclick="confirm('Are you sure, you want to delete?')"><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M19.3333 11.334V10.6673C19.3333 9.93094 18.7364 9.33398 18 9.33398H14C13.2636 9.33398 12.6667 9.93094 12.6667 10.6673V11.334H10.6667C10.2985 11.334 10 11.6325 10 12.0007C10 12.3688 10.2985 12.6673 10.6667 12.6673H11.3333V20.0007C11.3333 21.1053 12.2288 22.0007 13.3333 22.0007H18.6667C19.7713 22.0007 20.6667 21.1053 20.6667 20.0007V12.6673H21.3333C21.7015 12.6673 22 12.3688 22 12.0007C22 11.6325 21.7015 11.334 21.3333 11.334H19.3333ZM18 10.6673H14V11.334H18V10.6673ZM19.3333 12.6673H12.6667V20.0007C12.6667 20.3689 12.9651 20.6673 13.3333 20.6673H18.6667C19.0349 20.6673 19.3333 20.3689 19.3333 20.0007V12.6673ZM14 14.0007H15.3333V19.334H14V14.0007ZM18 14.0007H16.6667V19.334H18V14.0007Z" fill="#8F92A1"></path></svg></a></div>
-					</div>		
-				<form id="frmUpload" style="display:none;margin-top:40px;">
-					<p style="text-align: center;"><b>Update Campaign</b></p>
+				<form id="frmUpload">
 					<input type="text" id="name" name="name" placeholder="Enter Campaign Name" required />
 					<input type="date" id="start" name="start" placeholder="Enter Start Date" required />
 					<input type="date" id="end" name="end" placeholder="Enter End Date" required />
 					<input type="text" id="textColor" name="textColor" placeholder="Enter Text Color" />
 					<input type="text" id="headerColor" name="headerColor" placeholder="Enter Header Color" />
 					<input type="text" id="headerText" name="headerText" placeholder="Enter Header Text" />
-					<input type="submit" id="btnSubmit" name="btnSubmit" value="Update" />
+					<p>Upload CVS file for Compaign <input type="file" id="fileCSV" name="fileCSV" /></p>
+					<input type="submit" id="btnSubmit" name="btnSubmit" value="Create" />
 				</form>
-				<div id="details" style="display:none;">
-					<h3>Campaign Stores</h3>
-						<div class="pass header">
-							<div>Store Name</div>
-							<div>Unique Url</div>
-							<div>Is Module 1</div>
-							<div>Is Module 2</div>
-							<div>Is Module 3</div>
-							<div>Is Module 4</div>
-							<div>Is Module 5</div>
-							<div>Is Module 6</div>
-							<div>Is Module 7</div>
-							<div>Is Active</div>
-							<div></div>
-						</div>
-						<div class="pass">
-							<div>Store Name 1</div>
-							<div>Unique Url</div>
-							<div>Yes</div>
-							<div>Yes</div>
-							<div>Yes</div>
-							<div>No</div>
-							<div>No</div>
-							<div>Yes</div>
-							<div>Yes</div>
-							<div>Is Active</div>
-							<div class="buttons">
-								<a href="#" class="viewReport"><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"><path _ngcontent-gwj-c83="" fill-rule="evenodd" clip-rule="evenodd" d="M23.3334 15.9993C23.3334 20.0494 20.0501 23.3327 16.0001 23.3327C11.95 23.3327 8.66675 20.0494 8.66675 15.9993C8.66675 11.9493 11.95 8.66602 16.0001 8.66602C20.0501 8.66602 23.3334 11.9493 23.3334 15.9993ZM22.0001 15.9993C22.0001 19.3131 19.3138 21.9993 16.0001 21.9993C12.6864 21.9993 10.0001 19.3131 10.0001 15.9993C10.0001 12.6856 12.6864 9.99935 16.0001 9.99935C19.3138 9.99935 22.0001 12.6856 22.0001 15.9993ZM16.0001 11.3327C18.5774 11.3327 20.6667 13.422 20.6667 15.9993V16.666H19.3334V15.9993C19.3334 14.1584 17.841 12.666 16.0001 12.666C14.1591 12.666 12.6667 14.1584 12.6667 15.9993V16.666H11.3334V15.9993C11.3334 13.422 13.4228 11.3327 16.0001 11.3327ZM15.3334 13.9993V16.7798C14.5566 17.0543 14.0001 17.7952 14.0001 18.666C14.0001 19.7706 14.8955 20.666 16.0001 20.666C17.1047 20.666 18.0001 19.7706 18.0001 18.666C18.0001 17.7952 17.4435 17.0543 16.6667 16.7798V13.9993H15.3334ZM15.3334 18.666C15.3334 18.2978 15.6319 17.9993 16.0001 17.9993C16.3683 17.9993 16.6667 18.2978 16.6667 18.666C16.6667 19.0342 16.3683 19.3327 16.0001 19.3327C15.6319 19.3327 15.3334 19.0342 15.3334 18.666Z" fill="#8F92A1"></path></svg></a>
-								<a href="#" class="edit2"><svg width="14" height="14" viewBox="0 0 448 512" fill="#8F92A1" fill-opacity="0.7" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="copy" role="img" xmlns="http://www.w3.org/2000/svg" class="svg-inline--fa fa-copy fa-w-14 fa-lg"><path _ngcontent-gwj-c83="" fill="currentColor" d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"></path></svg></a><a href="#" onclick="confirm('Are you sure, you want to delete?')"><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M19.3333 11.334V10.6673C19.3333 9.93094 18.7364 9.33398 18 9.33398H14C13.2636 9.33398 12.6667 9.93094 12.6667 10.6673V11.334H10.6667C10.2985 11.334 10 11.6325 10 12.0007C10 12.3688 10.2985 12.6673 10.6667 12.6673H11.3333V20.0007C11.3333 21.1053 12.2288 22.0007 13.3333 22.0007H18.6667C19.7713 22.0007 20.6667 21.1053 20.6667 20.0007V12.6673H21.3333C21.7015 12.6673 22 12.3688 22 12.0007C22 11.6325 21.7015 11.334 21.3333 11.334H19.3333ZM18 10.6673H14V11.334H18V10.6673ZM19.3333 12.6673H12.6667V20.0007C12.6667 20.3689 12.9651 20.6673 13.3333 20.6673H18.6667C19.0349 20.6673 19.3333 20.3689 19.3333 20.0007V12.6673ZM14 14.0007H15.3333V19.334H14V14.0007ZM18 14.0007H16.6667V19.334H18V14.0007Z" fill="#8F92A1"></path></svg></a>
-							</div>
-						</div>
-						<div class="pass">
-							<div>Store Name 2</div>
-							<div>Unique Url</div>
-							<div>Yes</div>
-							<div>No</div>
-							<div>Yes</div>
-							<div>No</div>
-							<div>Yes</div>
-							<div>Yes</div>
-							<div>Yes</div>
-							<div>Is Active</div>
-							<div class="buttons">
-								<a href="#" class="viewReport"><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"><path _ngcontent-gwj-c83="" fill-rule="evenodd" clip-rule="evenodd" d="M23.3334 15.9993C23.3334 20.0494 20.0501 23.3327 16.0001 23.3327C11.95 23.3327 8.66675 20.0494 8.66675 15.9993C8.66675 11.9493 11.95 8.66602 16.0001 8.66602C20.0501 8.66602 23.3334 11.9493 23.3334 15.9993ZM22.0001 15.9993C22.0001 19.3131 19.3138 21.9993 16.0001 21.9993C12.6864 21.9993 10.0001 19.3131 10.0001 15.9993C10.0001 12.6856 12.6864 9.99935 16.0001 9.99935C19.3138 9.99935 22.0001 12.6856 22.0001 15.9993ZM16.0001 11.3327C18.5774 11.3327 20.6667 13.422 20.6667 15.9993V16.666H19.3334V15.9993C19.3334 14.1584 17.841 12.666 16.0001 12.666C14.1591 12.666 12.6667 14.1584 12.6667 15.9993V16.666H11.3334V15.9993C11.3334 13.422 13.4228 11.3327 16.0001 11.3327ZM15.3334 13.9993V16.7798C14.5566 17.0543 14.0001 17.7952 14.0001 18.666C14.0001 19.7706 14.8955 20.666 16.0001 20.666C17.1047 20.666 18.0001 19.7706 18.0001 18.666C18.0001 17.7952 17.4435 17.0543 16.6667 16.7798V13.9993H15.3334ZM15.3334 18.666C15.3334 18.2978 15.6319 17.9993 16.0001 17.9993C16.3683 17.9993 16.6667 18.2978 16.6667 18.666C16.6667 19.0342 16.3683 19.3327 16.0001 19.3327C15.6319 19.3327 15.3334 19.0342 15.3334 18.666Z" fill="#8F92A1"></path></svg></a>
-								<a href="#" class="edit2"><svg width="14" height="14" viewBox="0 0 448 512" fill="#8F92A1" fill-opacity="0.7" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="copy" role="img" xmlns="http://www.w3.org/2000/svg" class="svg-inline--fa fa-copy fa-w-14 fa-lg"><path _ngcontent-gwj-c83="" fill="currentColor" d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"></path></svg></a><a href="#" onclick="confirm('Are you sure, you want to delete?')"><svg _ngcontent-gwj-c83="" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"><path _ngcontent-gwj-c83="" fill-rule="evenodd" clip-rule="evenodd" d="M19.3333 11.334V10.6673C19.3333 9.93094 18.7364 9.33398 18 9.33398H14C13.2636 9.33398 12.6667 9.93094 12.6667 10.6673V11.334H10.6667C10.2985 11.334 10 11.6325 10 12.0007C10 12.3688 10.2985 12.6673 10.6667 12.6673H11.3333V20.0007C11.3333 21.1053 12.2288 22.0007 13.3333 22.0007H18.6667C19.7713 22.0007 20.6667 21.1053 20.6667 20.0007V12.6673H21.3333C21.7015 12.6673 22 12.3688 22 12.0007C22 11.6325 21.7015 11.334 21.3333 11.334H19.3333ZM18 10.6673H14V11.334H18V10.6673ZM19.3333 12.6673H12.6667V20.0007C12.6667 20.3689 12.9651 20.6673 13.3333 20.6673H18.6667C19.0349 20.6673 19.3333 20.3689 19.3333 20.0007V12.6673ZM14 14.0007H15.3333V19.334H14V14.0007ZM18 14.0007H16.6667V19.334H18V14.0007Z" fill="#8F92A1"></path></svg></a>
-							</div>
-						</div>
-				</div>				
-				<form id="frmUpload2" style="display:none;margin-top:40px;">
-					<p style="text-align: center;"><b>Update Campaign Store</b></p>
-					<p style="text-align: center;"><b>Store Name</b></p>
-					<p style="text-align: center;"><b>Unique Url</b></p>
-					<p style="text-align: left;">Module 1? <input type="checkbox" id="chkWebsiteUrl" name="chkWebsiteUrl" /></p>
-					<p style="text-align: left;">Module 2? <input type="checkbox" id="chkWebsiteUrl" name="chkWebsiteUrl" /></p>
-					<p style="text-align: left;">Module 3? <input type="checkbox" id="chkWebsiteUrl" name="chkWebsiteUrl" /></p>
-					<p style="text-align: left;">Module 4? <input type="checkbox" id="chkWebsiteUrl" name="chkWebsiteUrl" /></p>
-					<p style="text-align: left;">Module 5? <input type="checkbox" id="chkWebsiteUrl" name="chkWebsiteUrl" /></p>
-					<p style="text-align: left;">Module 6? <input type="checkbox" id="chkWebsiteUrl" name="chkWebsiteUrl" /></p>
-					<p style="text-align: left;">Module 7? <input type="checkbox" id="chkWebsiteUrl" name="chkWebsiteUrl" /></p>
-					<input type="submit" id="btnSubmit2" name="btnSubmit2" value="Update" />
-				</form>
-				<div id="report" style="display:none;">
-					<h3>Store Campaign Report</h3>
-						<div class="pass header">
-							<div>Source</div>
-							<div>Browser</div>
-							<div>Ip Address</div>
-							<div>Is Module 3</div>
-							<div>Landing Datetime</div>
-							<div>Selected Module</div>
-							<div>Module Open Datetime</div>
-						</div>
-						<div class="pass">
-							<div>Source</div>
-							<div>Browser</div>
-							<div>Ip Address</div>
-							<div>Is Module 3</div>
-							<div>Landing Datetime</div>
-							<div>Selected Module</div>
-							<div>Module Open Datetime</div>
-						</div>
-				</div>
+				<h3>Preview</h3>
+					<div class="pass header">
+						<div>Store Name</div>
+						<div>Unique Url</div>
+						<div>Is Module 1</div>
+						<div>Is Module 2</div>
+						<div>Is Module 3</div>
+						<div>Is Module 4</div>
+						<div>Is Module 5</div>
+						<div>Is Module 6</div>
+						<div>Is Module 7</div>
+					</div>
+					<div class="pass">
+						<div>Name</div>
+						<div>Unique Url</div>
+						<div>Yes</div>
+						<div>Yes</div>
+						<div>Yes</div>
+						<div>No</div>
+						<div>No</div>
+						<div>Yes</div>
+						<div>Yes</div>
+					</div>
 			</div>
 		</div>
 		<div id="footerWrap">
@@ -173,33 +82,5 @@
 			</div>
 		</div>
 	</div>
-
-    <script type="text/javascript">
-    	$(document).ready(function(){
-    		$("#viewDetail").click(function(e){
-    			$("#details").toggle();
-    			$("#report").hide();
-    			$("#frmUpload").hide();
-    		});
-    		$(".viewReport").click(function(e){
-    			$("#report").toggle();
-    		});
-    		$("#edit").click(function(e){
-    			$("#frmUpload").toggle();
-    			$("#details").hide();
-    			$("#report").hide();
-    		});
-    		$(".edit2").click(function(e){
-    			$("#frmUpload2").toggle();
-    			$("#report").hide();
-    		});
-    		$("#btnSubmit").click(function(e){
-    			$("#frmUpload").toggle();
-    		});
-    		$("#btnSubmit2").click(function(e){
-    			$("#frmUpload2").toggle();
-    		});
-    	})
-    </script>
 </body>
 </html>
