--- a/manage-campaign.html
+++ b/manage-campaign.html
@@ -47,7 +47,8 @@
 				<div id="pnlTop">
 					<h3></h3>
 					<a href="create-campaign.html">Create Campaign</a>
-				</div>
+				</div>				
+				<div id="pnlGrid">
 					<div class="pass header">
 						<div>Name</div>
 						<div>Start Date</div>
@@ -74,7 +75,8 @@
 							<a href="#" id="edit" title="edit"><svg width="14" height="14" viewBox="0 0 448 512" fill="#8F92A1" fill-opacity="0.7" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="copy" role="img" xmlns="http://www.w3.org/2000/svg" class="svg-inline--fa fa-copy fa-w-14 fa-lg"><path fill="currentColor" d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"></path></svg></a>
 							<a href="#" onclick="confirm('Are you sure, you want to delete?')" title="delete"><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M19.3333 11.334V10.6673C19.3333 9.93094 18.7364 9.33398 18 9.33398H14C13.2636 9.33398 12.6667 9.93094 12.6667 10.6673V11.334H10.6667C10.2985 11.334 10 11.6325 10 12.0007C10 12.3688 10.2985 12.6673 10.6667 12.6673H11.3333V20.0007C11.3333 21.1053 12.2288 22.0007 13.3333 22.0007H18.6667C19.7713 22.0007 20.6667 21.1053 20.6667 20.0007V12.6673H21.3333C21.7015 12.6673 22 12.3688 22 12.0007C22 11.6325 21.7015 11.334 21.3333 11.334H19.3333ZM18 10.6673H14V11.334H18V10.6673ZM19.3333 12.6673H12.6667V20.0007C12.6667 20.3689 12.9651 20.6673 13.3333 20.6673H18.6667C19.0349 20.6673 19.3333 20.3689 19.3333 20.0007V12.6673ZM14 14.0007H15.3333V19.334H14V14.0007ZM18 14.0007H16.6667V19.334H18V14.0007Z" fill="#8F92A1"></path></svg></a>
 						</div>
-					</div>		
+					</div>
+				</div>				
 				<form id="frmUpload" style="display:none;margin-top:40px;">
 					<p style="text-align: center;"><b>Update Campaign</b></p>
 					<input type="text" id="name" name="name" placeholder="Enter Campaign Name" required />
@@ -87,6 +89,7 @@
 				</form>
 				<div id="details" style="display:none;">
 					<h3>Campaign Stores</h3>
+					<div id="pnlGrid2">
 						<div class="pass header">
 							<div>Store Name</div>
 							<div>Unique Url</div>
@@ -134,6 +137,7 @@
 								<a href="#" onclick="confirm('Are you sure, you want to delete?')" title="delete"><svg _ngcontent-gwj-c83="" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"><path _ngcontent-gwj-c83="" fill-rule="evenodd" clip-rule="evenodd" d="M19.3333 11.334V10.6673C19.3333 9.93094 18.7364 9.33398 18 9.33398H14C13.2636 9.33398 12.6667 9.93094 12.6667 10.6673V11.334H10.6667C10.2985 11.334 10 11.6325 10 12.0007C10 12.3688 10.2985 12.6673 10.6667 12.6673H11.3333V20.0007C11.3333 21.1053 12.2288 22.0007 13.3333 22.0007H18.6667C19.7713 22.0007 20.6667 21.1053 20.6667 20.0007V12.6673H21.3333C21.7015 12.6673 22 12.3688 22 12.0007C22 11.6325 21.7015 11.334 21.3333 11.334H19.3333ZM18 10.6673H14V11.334H18V10.6673ZM19.3333 12.6673H12.6667V20.0007C12.6667 20.3689 12.9651 20.6673 13.3333 20.6673H18.6667C19.0349 20.6673 19.3333 20.3689 19.3333 20.0007V12.6673ZM14 14.0007H15.3333V19.334H14V14.0007ZM18 14.0007H16.6667V19.334H18V14.0007Z" fill="#8F92A1"></path></svg></a>
 							</div>
 						</div>
+					</div>		
 				</div>				
 				<form id="frmUpload2" style="display:none;margin-top:40px;">
 					<p style="text-align: center;"><b>Update Campaign Store</b></p>
@@ -150,6 +154,7 @@
 				</form>
 				<div id="report" style="display:none;">
 					<h3>Store Campaign Report</h3>
+					<div id="pnlGrid3">
 						<div class="pass header">
 							<div>Source</div>
 							<div>Browser</div>
@@ -168,6 +173,7 @@
 							<div>Selected Module</div>
 							<div>Module Open Datetime</div>
 						</div>
+					</div>			
 				</div>
 			</div>
 		</div>
@@ -188,6 +194,7 @@
     			$("#report").toggle();
     		});
     		$("#edit").click(function(e){
+    			$("#pnlGrid").hide();
     			$("#frmUpload").toggle();
     			$("#details").hide();
     			$("#report").hide();
@@ -198,6 +205,7 @@
     		});
     		$("#btnSubmit").click(function(e){
     			$("#frmUpload").toggle();
+    			$("#pnlGrid").show();
     		});
     		$("#btnSubmit2").click(function(e){
     			$("#frmUpload2").toggle();
