--- a/manage-companies.html
+++ b/manage-companies.html
@@ -44,8 +44,7 @@
 			<h4>Manage Companies</h4>
 			<div id="content">
 				<div id="pnlTop">
-					<h3></h3>
-					<a id="lnkNew" href="#">Create Company</a>
+					<a id="lnkNew" href="#" class="btnCreate">Create Company</a>
 				</div>
 				<div id="pnlGrid">
 					<div class="pass header">
