--- a/modules.html
+++ b/modules.html
@@ -44,8 +44,7 @@
 			<h4>Manage Modules</h4>
 			<div id="content">			
 				<div id="pnlTop">
-					<h3></h3>
-					<a id="lnkNew" href="#">Create Module</a>
+					<a id="lnkNew" href="#" class="btnCreate">Create Module</a>
 				</div>
 				<div id="pnlGrid">
 					<div class="pass header">
