--- a/manage-campaign.html
+++ b/manage-campaign.html
@@ -45,8 +45,7 @@
 			<div id="content">
 				<p style="text-align: center;font-weight: bold;font-size: 14px;width: 100%;">Company Name</p>
 				<div id="pnlTop">
-					<h3></h3>
-					<a href="create-campaign.html">Create Campaign</a>
+					<a href="create-campaign.html" class="btnCreate">Create Campaign</a>
 				</div>				
 				<div id="pnlGrid">
 					<div class="pass header">
