--- a/manage-stores.html
+++ b/manage-stores.html
@@ -45,8 +45,7 @@
 			<div id="content">			
 				<p style="text-align: center;font-weight: bold;font-size: 14px;width: 100%;">Company Name</p>	
 				<div id="pnlTop">
-					<h3></h3>
-					<a href="create-store.html">Create Store</a>
+					<a href="create-store.html" class="btnCreate">Create Store</a>
 				</div>
 				<div id="pnlGrid">
 					<div class="pass header">
