--- a/upload-campaign-stores.html
+++ b/upload-campaign-stores.html
@@ -41,59 +41,38 @@
 			</div>
 		</div>
 		<div id="contentWrap">
-			<h4>Manage Companies</h4>
+			<h4>Bulk Upload Campaign Stores</h4>
 			<div id="content">
-				<div id="pnlGrid">
+				<p style="text-align: center;font-weight: bold;font-size: 14px;width: 100%;">Campaign Name</p>
+				<form id="frmUpload" method="POST">
+					<p>Upload CVS file for Compaigns <input type="file" id="fileCSV" name="fileCSV" /></p>
+					<input type="submit" id="btnSubmit" name="btnSubmit" value="Upload" />
+				</form>
+				<h3>Preview</h3>
 					<div class="pass header">
 						<div>
-							<div>Name</div>
-							<div>Logo</div>
-							<div>Is Website</div>
-							<div>Is Calendar</div>
-							<div>Website Url</div>
-							<div>Calendar Url</div>
-							<div>Contact Form Url</div>
-							<div>Facebook Url</div>
-							<div>Is Active</div>
-							<div></div>
-						</div>
-						<div>
-							<a id="lnkNew" href="#" class="btnCreate" title="Create Company">Create Company</a>
+							<div>Store Name</div>
+							<div>Unique Url</div>
+							<div>Is Module 1</div>
+							<div>Is Module 2</div>
+							<div>Is Module 3</div>
+							<div>Is Module 4</div>
+							<div>Is Module 5</div>
+							<div>Is Module 6</div>
+							<div>Is Module 7</div>
 						</div>
 					</div>
 					<div class="pass">
 						<div>Name</div>
-						<div>Logo</div>
-						<div>Is Website</div>
-						<div>Is Calendar</div>
-						<div>Website Url</div>
-						<div>Calendar Url</div>
-						<div>Contact Form Url</div>
-						<div>Facebook Url</div>
-						<div>true</div>
-						<div><a href="manage-stores.html">Stores</a>&nbsp;&nbsp;&nbsp;<a href="manage-campaign.html">Campaigns</a></div>
-						<div class="buttons">
-							<a href="#" id="edit" title="edit">
-								<svg _ngcontent-gwj-c83="" width="14" height="14" viewBox="0 0 448 512" fill="#8F92A1" fill-opacity="0.7" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="copy" role="img" xmlns="http://www.w3.org/2000/svg" class="svg-inline--fa fa-copy fa-w-14 fa-lg"><path _ngcontent-gwj-c83="" fill="currentColor" d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"></path></svg>
-							</a>
-							<a href="#" onclick="confirm('Are you sure, you want to delete?')" title="delete">
-								<svg _ngcontent-gwj-c83="" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"><path _ngcontent-gwj-c83="" fill-rule="evenodd" clip-rule="evenodd" d="M19.3333 11.334V10.6673C19.3333 9.93094 18.7364 9.33398 18 9.33398H14C13.2636 9.33398 12.6667 9.93094 12.6667 10.6673V11.334H10.6667C10.2985 11.334 10 11.6325 10 12.0007C10 12.3688 10.2985 12.6673 10.6667 12.6673H11.3333V20.0007C11.3333 21.1053 12.2288 22.0007 13.3333 22.0007H18.6667C19.7713 22.0007 20.6667 21.1053 20.6667 20.0007V12.6673H21.3333C21.7015 12.6673 22 12.3688 22 12.0007C22 11.6325 21.7015 11.334 21.3333 11.334H19.3333ZM18 10.6673H14V11.334H18V10.6673ZM19.3333 12.6673H12.6667V20.0007C12.6667 20.3689 12.9651 20.6673 13.3333 20.6673H18.6667C19.0349 20.6673 19.3333 20.3689 19.3333 20.0007V12.6673ZM14 14.0007H15.3333V19.334H14V14.0007ZM18 14.0007H16.6667V19.334H18V14.0007Z" fill="#8F92A1"></path></svg>
-							</a>
-						</div>
+						<div>Unique Url</div>
+						<div>Yes</div>
+						<div>Yes</div>
+						<div>Yes</div>
+						<div>No</div>
+						<div>No</div>
+						<div>Yes</div>
+						<div>Yes</div>
 					</div>
-				</div>
-				<form id="frmUpload" style="display:none;margin-top:40px;">
-					<p style="text-align: center;"><b id="pnlNew">Update Company</b></p>
-					<input type="text" id="name" name="name" placeholder="Enter Company Name" required />
-					<p>Upload logo <input type="file" id="fileLogo" name="fileLogo" /></p>
-					<input type="text" id="WebsiteUrl" name="WebsiteUrl" placeholder="Enter Website Url" />
-					<input type="text" id="CalendarUrl" name="CalendarUrl" placeholder="Enter Calendar Url" />
-					<input type="text" id="ContactUrl" name="ContactUrl" placeholder="Enter Contact Form Url" />
-					<input type="text" id="FacebookUrl" name="FacebookUrl" placeholder="Enter Facebook Url" />
-					<textarea  id="headerText" name="headerText" placeholder="Header Text"></textarea>
-					<textarea id="footerText" name="footerText" placeholder="Footer Text"></textarea>
-					<input type="submit" id="btnSubmit" name="btnSubmit" value="Update" />
-				</form>
 			</div>
 		</div>
 		<div id="footerWrap">
@@ -104,21 +83,9 @@
 
     <script type="text/javascript">
     	$(document).ready(function(){
-    		$("#lnkNew").click(function(e){
-    			$("#pnlGrid").hide();
-    			$("#frmUpload").toggle();
-    			$("#pnlNew").html("Create Company");
-    			$("#btnSubmit").val("Create");
-    		});
-    		$("#edit").click(function(e){
-    			$("#pnlGrid").hide();
-    			$("#frmUpload").toggle();
-    			$("#pnlNew").html("Update Company");
-    			$("#btnSubmit").val("Update");
-    		});
     		$("#btnSubmit").click(function(e){
-    			$("#frmUpload").toggle();
-    			$("#pnlGrid").show();
+    			window.location.href="manage-campaign.html";
+    			e.preventDefault();
     		});
     	})
     </script>
